# ELFY

./: .gitmodules  CMakeLists.txt  README.md
include/: elf.h  options.h  utility.h
src/: CMakeLists.txt  elf.cc  main.cc  options.cc  utility.cc
